fixes safe area related layout issues

--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,4 +1,5 @@
 .app {
   box-sizing: border-box;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
