--- a/src/components/AppView/styles.module.css
+++ b/src/components/AppView/styles.module.css
@@ -1,7 +1,7 @@
 .appView {
   box-sizing: border-box;
-  min-height: 100vh;
   padding: 1rem;
+  width: 100%;
 }
 
 .appView.borderless {
