--- a/src/components/ContentCard/styles.module.css
+++ b/src/components/ContentCard/styles.module.css
@@ -1,5 +1,5 @@
 .contentCard {
   background-color: #fff;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 1rem 1rem env(safe-area-inset-bottom, 1rem);
 };
