--- a/src/components/EntryDetailView/styles.module.css
+++ b/src/components/EntryDetailView/styles.module.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   padding: 0;
+  height: 100vh;
 }
 
 .entryMetadata {
   display: flex;
   color: #fff;
   flex-direction: column;
-  flex: 1;
+  flex: 1 1 auto;
   justify-content: center;
   padding: 1rem;
 }
@@ -32,6 +33,8 @@
 
 .noteContent { 
   color: #777;
+  display: flex;
+  flex: 1;
   font-size: 1.125rem;
   margin-bottom: 1rem;
   max-height: 66vh;
