--- a/src/components/NoteComposer/styles.module.css
+++ b/src/components/NoteComposer/styles.module.css
@@ -10,14 +10,13 @@
 
 .noteComposer {
   border: 0.125rem solid #eee;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
+  flex: 1 0 auto;
   margin-top: 1rem;
 }
 
 .noteComposerEntry {
   border: none;
+  flex: 1 0 100%;
   height: 100%;
   outline: none;
   resize: none;
