--- a/src/components/SentimentCaptureView/styles.module.css
+++ b/src/components/SentimentCaptureView/styles.module.css
@@ -2,6 +2,7 @@
   padding: 0;
   flex-direction: column;
   display: flex;
+  flex: 0 0 100vh;
 }
 
 .currentDate {
@@ -16,7 +17,7 @@
   flex-direction: column;
   justify-content: center;
   display: flex;
-  flex: 1;
+  flex: 1 1 auto;
 }
 
 .greetingBigText {
@@ -36,23 +37,24 @@
   box-shadow: 0 -0.125rem 1rem rgba(0, 0, 0, 0.07);
   display: flex;
   flex-direction: column;
+  flex: 0 0 auto;
   height: auto;
   padding-top: 2rem;
   width: 100%;
 }
 
 .contentCard__noteVisible {
-  flex: 1;
+  flex: 1 0 auto;
   margin-top: 1rem;
 }
 
 .ctaWrapper {
   display: flex;
+  flex: 0 0 auto;
   flex-direction: row;
   margin-top: 2rem;
   border-top: 1px solid #eee;
   padding-top: 1rem;
-  padding-bottom: calc(env(safe-area-inset-bottom, 0) / 2);
 }
 
 .ctaWrapper__noteVisible {
