--- a/src/components/Slider/styles.module.css
+++ b/src/components/Slider/styles.module.css
@@ -1,4 +1,5 @@
 .sliderWrapper {
+  flex: 0 0 auto;
 }
 
 .slider[type='range'],
